# rtsp2jpeg

./: CMakeLists.txt  README.txt
libs/ffmpeg-4.2.2/include/libavutil/: rational.h
src/: main.cpp
